[package]
name = "lightshow"
version = "0.1.0"
authors = ["Kevin Nguyen <ngynkvn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9.0", features = ["full"] }
mqttrs = "0.4.1"
crossterm = "0.20.0"
tui = { version = "0.16.0", default-features = false, features = ['crossterm'] }
clap = "3.0.0-beta.2"
